put table overflow in the correct place

--- a/src/components/expenseList.module.css
+++ b/src/components/expenseList.module.css
@@ -14,3 +14,7 @@
 .green {
 	color: green;
 }
+
+.tableContainer {
+	overflow-x: auto;
+}
