--- a/src/components/table.module.css
+++ b/src/components/table.module.css
@@ -1,5 +1,4 @@
 .container {
-	overflow-x: auto;
 	letter-spacing: 1px;
 	font-size: 1.6rem;
 	width: 100%;
